# kap-copd

./: .gitignore  README.md  pyproject.toml  requirements.txt
autrainer/copd_phrase_baseline/: README.md
autrainer/copd_phrase_baseline/conf/: config.yaml
autrainer/copd_phrase_baseline/scripts/: aggregate_predictions_to_speakers.py  prepare_phrase_segment_dataset.py
data/interim/: phrases.csv  sustained_vowel_inventory.csv  vowels.csv
data/metadata/: copd_labels.csv  speaker_labels.csv
data/processed/: phrase_features_eGeMAPS.csv  phrase_features_with_labels.csv  speaker_features_eGeMAPS.csv  sustained_vowel_features_eGeMAPS.csv  sustained_vowel_features_with_labels.csv
legacy/original_pipeline/: aggregate_speaker_features.py
results/classical_ml/run_20260118_185627/: KAP_COPD_Evaluation_Report.xlsx  common_phrase_summary.csv  common_vowel_summary.csv  phrase_folds.csv  run_config.json  vowel_folds.csv
results/classical_ml/sustained_vowels_with_age_gender/: folds_GradientBoosting.csv  folds_LogReg.csv  folds_RandomForest.csv  folds_SVM_RBF.csv  summary.csv  (+4 more)
results/paper_tables/: label_overview.csv  main_results.csv  phrase_age_gender_ablation.csv  sustained_vowel_results.csv
results/qc/: dataset_summary.csv  sustained_vowel_inventory_summary.csv  sustained_vowel_missing_labeled_speakers.csv
scripts/: build_qc_tables.py  build_sustained_vowel_features.py  build_sustained_vowel_index.py  check_repo.py  export_paper_tables.py  run_age_gender_ablation.py  run_classical_eval.py
src/kap_copd/: __init__.py  evaluation.py  qc.py  sustained_vowels.py
(+25 files in other folders)
