[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kap-copd"
version = "0.1.0"
description = "KAP COPD voice biomarker project"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "openpyxl",
  "opensmile",
  "pandas",
  "scikit-learn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
